# vba-blocks

./: .babelrc.js  .editorconfig  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  azure-pipelines.yml  e2e.config.js  jest.config.js  lerna.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
.github/: FUNDING.yml
VBA-Installer/: Installer.bas  vba-block.toml
__mocks__/: child_process.js
addin/: vba-block.toml
addins/: vba-block.toml
cli/: Cargo.toml  design.md  package.json  tsconfig.json
cli/archive-rs/: Cargo.toml
cli/archive-rs/src/: lib.rs
cli/lib/: build.js  config.js  packages.js  registry.js  run.js
cli/lib/utils/: checksum.js  download.js  each-object.js  git.js  is.js  map-object.js  plural.js  zip.js
cli/scripts/: run.scpt  run.vbs
cli/src/: build.js  build.ts  cli.yml  config.js  config.rs  config.ts  fns.rs  main.rs  manifest.js  manifest.rs  manifest.ts  packages.js  packages.ts  registry.ts  resolve.ts  run.js  utils.js  version.ts  zip.js
cli/src/manifest/: dependency.ts  feature.ts  index.ts  reference.ts  source.ts  target.ts
cli/src/ops/: add.rs  build.rs  init.rs  list.rs  mod.rs  publish.rs  remove.rs  search.rs  test.rs  update.rs  version.rs
cli/src/resolve/: index.ts  lockfile.ts
cli/src/utils/: checksum.ts  convert-to-toml.ts  download.ts  each-object.ts  git.ts  has.ts  index.js  index.ts  is.ts  map-object.ts  plural.ts  zip.ts
cli/tests/: help.rs  preprocessor.js  testing.js  utils.test.ts
cli/tests/fixtures/: vba-block.toml
cli/tests/vbablockstest/: Cargo.toml
cli/tests/vbablockstest/src/: lib.rs
design/: build.md  resolve.md
e2e/: excel.e2e.js
installer/: Install vba-blocks  Install vba-blocks.applescript  Install vba-blocks.sh  install-vba-blocks.sh  template.wxs  vba-blocks  vba-blocks-icon.icns  vba-blocks.applescript  vba-blocks.wxs
installer/actions/: Cargo.toml
installer/actions/src/: main.rs  process_list.rs  registry.rs
native/: Cargo.toml  index.js
native/__tests__/: native.test.js
native/src/: lib.rs  main.rs  process_list.rs  registry.rs
run-scripts/: open.vbs  (+2 more)
(+486 files in other folders)
