[package]
name = "vba-blocks"
version = "0.0.0"
authors = ["Tim Hall <tim.hall.engr@gmail.com>"]

[dependencies]
clap = { version = "2", features = ["yaml"] }
serde = { version = "1" }
serde_derive = { version = "1" }
toml = { version = "0.4" }
archive = { path = "archive-rs/" }

[dev-dependencies]
vbablockstest = { path = "tests/vbablockstest" }
hamcrest = "0.1"
