[package]
name = "vba-blocks"
version = "0.0.0"
authors = ["Tim Hall <tim.hall.engr@gmail.com>"]

[dependencies]
clap = { version = "2", features = ["yaml"] }
serde = "1"
serde_derive = "1"
toml = "0.4"
serde_json = "1"
error-chain = "0.10"
archive = { path = "archive-rs/" }

[dev-dependencies]
vbablockstest = { path = "tests/vbablockstest" }
hamcrest = "0.1"
