[package]
name = "vba-blocks-actions"
version = "0.0.0"
authors = ["Tim Hall <tim.hall.engr@gmail.com>"]
license = "MIT"

[dependencies]
dirs = "1.0.4"
itertools = "0.7.8"
symlink = "0.1.0"
winapi = { version = "0.3.6", features = ["basetsd", "minwindef", "winuser"] }
winreg = { version = "0.5.1", features = ["transactions"] }
